New Apocalypse, Homing
Added support for homing objects. Added a new apocalypse with homing mines that can eat through terrain

--- a/Base/Rules/CommonScripts/NullScriptFix.cfg
+++ b/Base/Rules/CommonScripts/NullScriptFix.cfg
@@ -59,6 +59,8 @@ $name                                             = ahefjhakjfhaefjdavfhaoweoiba
 													ItemSpawner.as;
 													BallistaBoltFrameFix.as;
 													BallistaBoltExplosionFix.as;
+                                                    Homing.as;
+                                                    SmoothHoming.as;
 
 f32 health                                        = 1.0
 $inventory_name                                   = NullScriptFix
